--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -2204,7 +2204,7 @@ form .button {
 }
 
 input[type="range"] {
-    -webkit-appearance: none;
+    --webkit-appearance: none;
     width: 100%;
 }
 
