--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -2154,7 +2154,7 @@ form .button {
 }
 
 input[type="range"] {
-    -webkit-appearance: none;
+    --webkit-appearance: none;
     width: 100%;
 }
 
