user edit profile

--- a/views/home/user_home.hbs
+++ b/views/home/user_home.hbs
@@ -1,4 +1,4 @@
-script type="module" src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script type="module" src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
 <style type="stylesheets">
     @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);</style>
@@ -35,7 +35,7 @@ script type="module" src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.m
 
                                             <ul class="profile-dropdown-list">
                                                 <li class="profile-dropdown-list-item">
-                                                    <a href="#">
+                                                    <a href="/user_profile">
                                                         <i class="ri-user-line"></i>
                                                         Edit Profile
                                                     </a>
