--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -170,7 +170,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href="/aboutus"><span>Our</span></a></li>
+                                <li><a href="/site/aboutus"><span>Our</span></a></li>
                             </ul>
 
                             <ul>
