--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -359,7 +359,7 @@
                 </div>
             </div>
         </div>
-        <!--Guide-->
+        <!--Caousel-->
         <div class="carousel">
             <div class="container">
                 <div class="wrap">
@@ -418,7 +418,7 @@
                 </div>
             </div>
         </div>
-        <!--Carousel-->
+        <!--Bycats-->
         <div class="bycats">
             <div class="container">
                 <div class="wrap">
@@ -534,7 +534,9 @@
                                             <div class="label"><span>-5%</span></div>
                                         </div>
                                         <div class="dot-info">
-                                            <h2 class="dot-title"><a href="/product/detail/656c71ae070d4b726e9d9c76">Jordan Max Aura 5</a></h2>
+                                            <h2 class="dot-title"><a
+                                                    href="/product/detail/656c71ae070d4b726e9d9c76">Jordan Max Aura
+                                                    5</a></h2>
                                             <div class="product-price">
                                                 <span class="before">$158</span>
                                                 <span class="current">$50</span>
@@ -566,7 +568,9 @@
                                             <div class="label"><span>0%</span></div>
                                         </div>
                                         <div class="dot-info">
-                                            <h2 class="dot-title"><a href="/product/detail/657c1cdde5afc31c7478ca8e">Jordan Stay Loyal 2</a></h2>
+                                            <h2 class="dot-title"><a
+                                                    href="/product/detail/657c1cdde5afc31c7478ca8e">Jordan Stay Loyal
+                                                    2</a></h2>
                                             <div class="product-price">
                                                 {{!-- <span class="before">$134</span> --}}
                                                 <span class="current">$138</span>
@@ -606,7 +610,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657bc136f66e6a5f44494fe8">Nike Free Metcon 5</a></h2>
+                                                    href="/product/detail/657bc136f66e6a5f44494fe8">Nike Free Metcon
+                                                    5</a></h2>
                                             <div class="product-price">
                                                 <span class="before">$145</span>
                                                 <span class="current">$131</span>
@@ -639,7 +644,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657bc31bf66e6a5f44494fe9">Nike Free Metcon 5</a></h2>
+                                                    href="/product/detail/657bc31bf66e6a5f44494fe9">Nike Free Metcon
+                                                    5</a></h2>
                                             <div class="product-price">
                                                 <span class="before">$79</span>
                                                 <span class="current">$68</span>
@@ -672,7 +678,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657bc31bf66e6a5f44494fe9">Nike Air Zoom TR 1</a></h2>
+                                                    href="/product/detail/657bc31bf66e6a5f44494fe9">Nike Air Zoom TR
+                                                    1</a></h2>
                                             <div class="product-price">
                                                 {{!-- <span class="before">$79</span> --}}
                                                 <span class="current">$145</span>
@@ -705,7 +712,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c22b8e5afc31c7478ca90">Nike Metcon 8</a></h2>
+                                                    href="/product/detail/657c22b8e5afc31c7478ca90">Nike Metcon 8</a>
+                                            </h2>
                                             <div class="product-price">
                                                 <span class="before">$158</span>
                                                 <span class="current">$111</span>
@@ -744,7 +752,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c2512e5afc31c7478ca92">Nike Alphafly 2</a></h2>
+                                                    href="/product/detail/657c2512e5afc31c7478ca92">Nike Alphafly 2</a>
+                                            </h2>
                                             <div class="product-price">
                                                 <span class="before">$333</span>
                                                 <span class="current">$317</span>
@@ -777,7 +786,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c2605e5afc31c7478ca93">Nike Vaporfly 3</a></h2>
+                                                    href="/product/detail/657c2605e5afc31c7478ca93">Nike Vaporfly 3</a>
+                                            </h2>
                                             <div class="product-price">
                                                 <span class="before">$273</span>
                                                 <span class="current">$260</span>
@@ -810,7 +820,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c2719e5afc31c7478ca95">Nike Alphafly 3 Proto</a></h2>
+                                                    href="/product/detail/657c2719e5afc31c7478ca95">Nike Alphafly 3
+                                                    Proto</a></h2>
                                             <div class="product-price">
                                                 <span class="before">$333</span>
                                                 <span class="current">$307</span>
@@ -843,7 +854,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c27cce5afc31c7478ca96">Nike Pegasus Trail 4</a></h2>
+                                                    href="/product/detail/657c27cce5afc31c7478ca96">Nike Pegasus Trail
+                                                    4</a></h2>
                                             <div class="product-price">
                                                 <span class="before">$158</span>
                                                 <span class="current">$134</span>
@@ -876,7 +888,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c27cce5afc31c7478ca96">Nike Pegasus Trail 4</a></h2>
+                                                    href="/product/detail/657c27cce5afc31c7478ca96">Nike Pegasus Trail
+                                                    4</a></h2>
                                             <div class="product-price">
                                                 <span class="before">$158</span>
                                                 <span class="current">$134</span>
@@ -915,7 +928,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c292fe5afc31c7478ca98">Nike Air Max 90 GORE-TEX</a></h2>
+                                                    href="/product/detail/657c292fe5afc31c7478ca98">Nike Air Max 90
+                                                    GORE-TEX</a></h2>
                                             <div class="product-price">
                                                 {{!-- <span class="before">$158</span> --}}
                                                 <span class="current">$194</span>
@@ -948,7 +962,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c2a1ae5afc31c7478ca9a">Nike Air Max Scorpion Flyknit</a></h2>
+                                                    href="/product/detail/657c2a1ae5afc31c7478ca9a">Nike Air Max
+                                                    Scorpion Flyknit</a></h2>
                                             <div class="product-price">
                                                 <span class="before">$315</span>
                                                 <span class="current">$300</span>
@@ -981,7 +996,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c2b2ee5afc31c7478ca9b">Nike Air VaporMax 2023 Flyknit</a></h2>
+                                                    href="/product/detail/657c2b2ee5afc31c7478ca9b">Nike Air VaporMax
+                                                    2023 Flyknit</a></h2>
                                             <div class="product-price">
                                                 {{!-- <span class="before">$315</span> --}}
                                                 <span class="current">$255</span>
@@ -1014,7 +1030,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c2c00e5afc31c7478ca9c">Nike Air Max Pulse</a></h2>
+                                                    href="/product/detail/657c2c00e5afc31c7478ca9c">Nike Air Max
+                                                    Pulse</a></h2>
                                             <div class="product-price">
                                                 <span class="before">$184</span>
                                                 <span class="current">$163</span>
@@ -1047,7 +1064,8 @@
                                         </div>
                                         <div class="dot-info">
                                             <h2 class="dot-title"><a
-                                                    href="/product/detail/657c2cdae5afc31c7478ca9d">Nike Air Max 95</a></h2>
+                                                    href="/product/detail/657c2cdae5afc31c7478ca9d">Nike Air Max 95</a>
+                                            </h2>
                                             <div class="product-price">
                                                 <span class="before">$300</span>
                                                 <span class="current">$285</span>
@@ -1066,7 +1084,7 @@
                             <div class="content">
                                 <span>Promo</span>
                                 <h3 class="title">Get ready!<br>Summer is coming now..</h3>
-                                <div class="button"><a href="" class="primary-btn">Let's do it</a></div>
+                                <div class="button"><a href="/category" class="primary-btn">Let's do it</a></div>
                             </div>
                         </div>
                     </div>
