--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -514,8 +514,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="label"><span>-{{percent this.discount
-                                                            this.price}}%</span></div>
+                                                    <div class="label"><span>{{percent this.view}}%</span></div>
                                                 </div>
                                                 <div class="dot-info">
                                                     <h2 class="dot-title"><a
@@ -870,89 +869,3 @@
         </div>
     </div>
 </div>
-
-<script>
-    // Lấy phần tử input range
-    const $ = document.querySelector.bind(document)
-    const $$ = document.querySelectorAll.bind(document)
-    const rangeInput = $('#range-price');
-    const submitBtn = $('#primary-btn');
-
-    // handle sort and filter
-
-    let maxPrice = 0;
-    let minPrice = 0;
-    // Thêm sự kiện 'input' để theo dõi sự thay đổi giá trị
-    rangeInput.addEventListener('input', function () {
-        // Lấy giá trị hiện tại từ phần tử input range
-        maxPrice = rangeInput.value;
-        // Hiển thị giá trị trong console hoặc làm cái gì đó với giá trị này
-        console.log('Giá trị hiện tại:', maxPrice);
-    });
-    let currentUrl = new URL(window.location.href);
-
-    const sortSelection = document.getElementById("sort_selection");
-    console.log(sortSelection)
-    sortSelection.addEventListener("change", async function () {
-
-        let selectedValue = sortSelection.value;
-        const parts = selectedValue.split('-');
-        const sortByOrder = parts[1];
-        const sortByField = parts[0];
-        if (currentUrl.searchParams.has('sortByField')) {
-            currentUrl.searchParams.set('sortByField', sortByField);
-        }
-        else {
-            currentUrl.searchParams.append('sortByField', sortByField);
-        }
-
-        if (currentUrl.searchParams.has('sortByOrder')) {
-            currentUrl.searchParams.set('sortByOrder', sortByOrder);
-        }
-        else {
-            currentUrl.searchParams.append('sortByOrder', sortByOrder);
-        }
-        console.log('haha')
-        window.location.href = currentUrl.toString();
-
-
-    })
-    submitBtn.addEventListener('click', function () {
-
-
-
-        if (currentUrl.searchParams.has('minPrice')) {
-            currentUrl.searchParams.set('minPrice', minPrice);
-        }
-        else {
-            currentUrl.searchParams.append('minPrice', minPrice);
-        }
-
-        if (currentUrl.searchParams.has('maxPrice')) {
-            currentUrl.searchParams.set('maxPrice', maxPrice);
-        }
-        else {
-            currentUrl.searchParams.append('maxPrice', maxPrice);
-        }
-        console.log(currentUrl.toString());
-        window.location.href = currentUrl.toString();
-
-    });
-
-
-
-    $('.fa-search').addEventListener('click', function () {
-        const tutorName = $('#search-tutor').value
-        console.log(tutorName)
-        if (currentUrl.searchParams.has('tutorName')) {
-            currentUrl.searchParams.set('tutorName', tutorName);
-        }
-        else {
-            currentUrl.searchParams.append('tutorName', tutorName);
-        }
-        window.location.href = currentUrl.toString();
-
-    });
-
-
-</script>
