--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -514,7 +514,7 @@
                                                             </li>
                                                         </ul>
                                                     </div>
-                                                    <div class="label"><span>{{percent this.view}}%</span></div>
+                                                    <div class="label"><span>{{this.view}}%</span></div>
                                                 </div>
                                                 <div class="dot-info">
                                                     <h2 class="dot-title"><a
